--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -1,3 +1,19 @@
 body {
   background: black;
 }
+
+.logo {
+  max-width: 600px;
+  margin: 0 auto;
+  svg {
+    fill: white;
+  }
+}
+
+.rss {
+  margin: 50px auto;
+  max-width: 50px;
+  svg {
+    fill: orange;
+  }
+}
