Updating some copy, adding MOT to the feed

--- a/assets/index.pug
+++ b/assets/index.pug
@@ -10,7 +10,7 @@ html(lang="en")
       include ./img/ppa.svg
     section.about
       h1.about.heading Peoria Podcast Alliance
-      p We’re a group of podcasters in Peoria, joining forces to share the hobby and love of podcasting and producing. We’re looking for people who love entertaining, educating, and producing high-quality and fun shows in and around Peoria.
+      p We're a group of podcasters in Peoria, joining forces to share the hobby and love of podcasting and producing. We're looking for people who love entertaining, educating, and producing high-quality and fun shows in and around Peoria.
     section.links-container
       div.links
         div.intro
